Fix: Hide scrollbar for pagewrapper

--- a/src/app/components/PageWrapper/PageWrapper.module.scss
+++ b/src/app/components/PageWrapper/PageWrapper.module.scss
@@ -4,6 +4,7 @@
     @include ohma.pagePadding();
     align-self: flex-start;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 
     h1 {
         font-family: ohma.$fonts-secondary;
