--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -92,6 +92,7 @@
     max-width: $max-width;
     margin-left: max(calc(($width - min($width, $max-width)) / 2), 0px);
     position: relative;
+    overflow-y: hidden;
 }
 
 @keyframes rotate {
